change hw13
work with pair class